@@ -1,11 +1,18 @@
 package com.realtech.socialsurvey.web.controller;
 
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import javax.imageio.ImageIO;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
+import javax.ws.rs.QueryParam;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrDocumentList;
 import org.slf4j.Logger;
@@ -20,6 +27,7 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.multipart.MultipartFile;
+import sun.misc.BASE64Decoder;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.type.TypeFactory;
 import com.google.gson.Gson;
@@ -28,8 +36,10 @@ import com.realtech.socialsurvey.core.dao.impl.MongoOrganizationUnitSettingDaoIm
 import com.realtech.socialsurvey.core.entities.Achievement;
 import com.realtech.socialsurvey.core.entities.AgentSettings;
 import com.realtech.socialsurvey.core.entities.Association;
+import com.realtech.socialsurvey.core.entities.Branch;
 import com.realtech.socialsurvey.core.entities.ContactDetailsSettings;
 import com.realtech.socialsurvey.core.entities.ContactNumberSettings;
+import com.realtech.socialsurvey.core.entities.DisplayMessage;
 import com.realtech.socialsurvey.core.entities.FacebookToken;
 import com.realtech.socialsurvey.core.entities.Licenses;
 import com.realtech.socialsurvey.core.entities.LinkedInToken;
@@ -37,7 +47,9 @@ import com.realtech.socialsurvey.core.entities.LockSettings;
 import com.realtech.socialsurvey.core.entities.MailIdSettings;
 import com.realtech.socialsurvey.core.entities.MiscValues;
 import com.realtech.socialsurvey.core.entities.OrganizationUnitSettings;
+import com.realtech.socialsurvey.core.entities.Region;
 import com.realtech.socialsurvey.core.entities.SocialMediaTokens;
+import com.realtech.socialsurvey.core.entities.SurveyDetails;
 import com.realtech.socialsurvey.core.entities.TwitterToken;
 import com.realtech.socialsurvey.core.entities.User;
 import com.realtech.socialsurvey.core.entities.UserSettings;
@@ -45,8 +57,13 @@ import com.realtech.socialsurvey.core.entities.WebAddressSettings;
 import com.realtech.socialsurvey.core.entities.YelpToken;
 import com.realtech.socialsurvey.core.enums.AccountType;
 import com.realtech.socialsurvey.core.enums.DisplayMessageType;
+import com.realtech.socialsurvey.core.exception.InternalServerException;
 import com.realtech.socialsurvey.core.exception.InvalidInputException;
+import com.realtech.socialsurvey.core.exception.NoRecordsFetchedException;
 import com.realtech.socialsurvey.core.exception.NonFatalException;
+import com.realtech.socialsurvey.core.exception.ProfileServiceErrorCode;
+import com.realtech.socialsurvey.core.services.mail.UndeliveredEmailException;
+import com.realtech.socialsurvey.core.services.organizationmanagement.OrganizationManagementService;
 import com.realtech.socialsurvey.core.services.organizationmanagement.ProfileManagementService;
 import com.realtech.socialsurvey.core.services.search.SolrSearchService;
 import com.realtech.socialsurvey.core.services.upload.FileUploadService;
@@ -74,6 +91,9 @@ public class ProfileManagementController {
 	private UrlValidationHelper urlValidationHelper;
 
 	@Autowired
+	private OrganizationManagementService organizationManagementService;
+
+	@Autowired
 	private ProfileManagementService profileManagementService;
 
 	@Autowired
@@ -81,7 +101,10 @@ public class ProfileManagementController {
 
 	@Autowired
 	private SolrSearchService solrSearchService;
-	
+
+	@Value("${APPLICATION_BASE_URL}")
+	private String applicationBaseUrl;
+
 	@Value("${AMAZON_ENDPOINT}")
 	private String endpoint;
 
@@ -121,7 +144,7 @@ public class ProfileManagementController {
 			if (settings.getRegionSettings().size() > 0) {
 				regionId = user.getUserProfiles().get(0).getRegionId();
 			}
-			
+
 			LOG.debug("branchId: " + branchId + ", regionId: " + regionId);
 			parentLock = profileManagementService.aggregateParentLockSettings(user, accountType, settings, branchId, regionId);
 		}
@@ -140,7 +163,7 @@ public class ProfileManagementController {
 			long agentId = 0;
 			long branchId = 0;
 			long regionId = 0;
-			
+
 			if (settings.getAgentSettings().size() > 0) {
 				agentId = user.getUserProfiles().get(0).getAgentId();
 			}
@@ -150,7 +173,7 @@ public class ProfileManagementController {
 			if (settings.getRegionSettings().size() > 0) {
 				regionId = user.getUserProfiles().get(0).getRegionId();
 			}
-			
+
 			LOG.debug("agentId: " + agentId + ", branchId: " + branchId + ", regionId: " + regionId);
 			profile = profileManagementService.aggregateUserProfile(user, accountType, settings, agentId, branchId, regionId);
 		}
@@ -161,7 +184,7 @@ public class ProfileManagementController {
 		LOG.debug("Method fetchUserProfile() finished from ProfileManagementService");
 		return profile;
 	}
-	
+
 	@RequestMapping(value = "/fetchaboutme", method = RequestMethod.GET)
 	public String fetchProfileAboutMe(Model model, HttpServletRequest request) {
 		LOG.info("Fetching profile aboutme");
@@ -295,12 +318,12 @@ public class ProfileManagementController {
 				lockSettings = updateLockSettings(lockSettings, parentLock, fieldId, fieldState);
 				lockSettings = profileManagementService.updateLockSettings(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION,
 						branchSettings, lockSettings);
-				LOG.info(lockSettings.getIsDisplayNameLocked()+"");
+				LOG.info(lockSettings.getIsDisplayNameLocked() + "");
 				branchSettings.setLockSettings(lockSettings);
 				userSettings.getBranchSettings().put(branchId, branchSettings);
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding Contact details.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred in editing LockSettings.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setLockSettings(lockSettings);
@@ -308,13 +331,15 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Lock Settings updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LOCK_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LOCK_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
-			LOG.error("NonFatalException while updating profile address details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LOCK_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			LOG.error("NonFatalException while editing LockSettings. Reason :" + nonFatalException.getMessage(), nonFatalException);
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LOCK_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
-		
+
 		LOG.info("Method updateLockSettings() finished from ProfileManagementController");
 		return JspResolver.MESSAGE_HEADER;
 	}
@@ -322,7 +347,7 @@ public class ProfileManagementController {
 	// Update lockSettings
 	private LockSettings updateLockSettings(LockSettings lockSettings, LockSettings parentLock, String fieldId, boolean status) {
 		LOG.debug("Method updateLockSettings() called from ProfileManagementController");
-		
+
 		// Checking if locked by parent, if not updating lock settings
 		switch (fieldId) {
 			case "prof-name-lock":
@@ -338,6 +363,11 @@ public class ProfileManagementController {
 			case "web-address-work-lock":
 				if (!parentLock.getIsWebAddressLocked()) {
 					lockSettings.setWebAddressLocked(status);;
+				}
+				break;
+			case "web-address-blogs-lock":
+				if (!parentLock.getIsBlogAddressLocked()) {
+					lockSettings.setBlogAddressLocked(status);;
 				}
 				break;
 			case "phone-number-work-lock":
@@ -364,7 +394,7 @@ public class ProfileManagementController {
 		LOG.debug("Method updateLockSettings() finished from ProfileManagementController");
 		return lockSettings;
 	}
-	
+
 	/**
 	 * Method to update about profile details
 	 * 
@@ -445,21 +475,23 @@ public class ProfileManagementController {
 				solrSearchService.editUserInSolr(agentId, CommonConstants.ABOUT_ME_SOLR, aboutMe);
 			}
 			else {
-				throw new InvalidInputException("Error occurred while checking user details.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Error occurred while updating About me.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setContact_details(contactDetailsSettings);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
-			
+
 			LOG.info("About me details updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.ABOUT_ME_DETAILS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.ABOUT_ME_DETAILS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating about me details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.ABOUT_ME_DETAILS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.ABOUT_ME_DETAILS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
-		
+
 		LOG.info("Method updateAboutMe() finished from ProfileManagementController");
 		return JspResolver.MESSAGE_HEADER;
 	}
@@ -542,31 +574,34 @@ public class ProfileManagementController {
 						MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings, contactDetailsSettings);
 				agentSettings.setContact_details(contactDetailsSettings);
 				userSettings.getAgentSettings().put(agentId, agentSettings);
-				
+
 				// Modify Agent details in Solr
 				solrSearchService.editUserInSolr(agentId, CommonConstants.USER_DISPLAY_NAME_SOLR, name);
 				solrSearchService.editUserInSolr(agentId, CommonConstants.TITLE_SOLR, title);
 				if (name.indexOf(" ") != -1) {
 					solrSearchService.editUserInSolr(agentId, CommonConstants.USER_FIRST_NAME_SOLR, name.substring(0, name.indexOf(' ')));
 					solrSearchService.editUserInSolr(agentId, CommonConstants.USER_LAST_NAME_SOLR, name.substring(name.indexOf(' ') + 1));
-				} else {
+				}
+				else {
 					solrSearchService.editUserInSolr(agentId, CommonConstants.USER_FIRST_NAME_SOLR, name);
 				}
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding Contact details.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred in upadting Basic details.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setContact_details(contactDetailsSettings);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
-			
+
 			LOG.info("Basic Detail updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.BASIC_DETAILS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.BASIC_DETAILS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating profile basic details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.BASIC_DETAILS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.BASIC_DETAILS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateBasicDetail() finished from ProfileManagementController");
@@ -675,18 +710,19 @@ public class ProfileManagementController {
 
 				// Modify Agent details in Solr
 				solrSearchService.editUserInSolr(agentId, CommonConstants.USER_DISPLAY_NAME_SOLR, name);
-				solrSearchService.editUserInSolr(agentId, CommonConstants.ADDRESS1, address1);
-				solrSearchService.editUserInSolr(agentId, CommonConstants.ADDRESS2, address2);
-				solrSearchService.editUserInSolr(agentId, CommonConstants.ADDRESS, address1 + ", " + address2);
+				// solrSearchService.editUserInSolr(agentId, CommonConstants.ADDRESS1, address1);
+				// solrSearchService.editUserInSolr(agentId, CommonConstants.ADDRESS2, address2);
+				// solrSearchService.editUserInSolr(agentId, CommonConstants.ADDRESS, address1 + ", " + address2);
 				if (name.indexOf(" ") != -1) {
 					solrSearchService.editUserInSolr(agentId, CommonConstants.USER_FIRST_NAME_SOLR, name.substring(0, name.indexOf(' ')));
 					solrSearchService.editUserInSolr(agentId, CommonConstants.USER_LAST_NAME_SOLR, name.substring(name.indexOf(' ') + 1));
-				} else {
+				}
+				else {
 					solrSearchService.editUserInSolr(agentId, CommonConstants.USER_FIRST_NAME_SOLR, name);
 				}
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding Contact details.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred in editing Address details.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setContact_details(contactDetailsSettings);
@@ -694,11 +730,13 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Profile addresses updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_ADDRESSES_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_ADDRESSES_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating profile address details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_ADDRESSES_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_ADDRESSES_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateProfileAddress() finished from ProfileManagementController");
@@ -706,8 +744,8 @@ public class ProfileManagementController {
 	}
 
 	// Update address details
-	private ContactDetailsSettings updateAddressDetail(ContactDetailsSettings contactDetailsSettings, String name, String address1, String address2, String country,
-			String zipcode) {
+	private ContactDetailsSettings updateAddressDetail(ContactDetailsSettings contactDetailsSettings, String name, String address1, String address2,
+			String country, String zipcode) {
 		LOG.debug("Method updateAddressDetail() called from ProfileManagementController");
 		contactDetailsSettings.setName(name);
 		contactDetailsSettings.setAddress(address1 + ", " + address2);
@@ -746,7 +784,7 @@ public class ProfileManagementController {
 					throw new InvalidInputException("Logo passed is null or empty");
 				}
 				logoUrl = fileUploadService.fileUploadHandler(fileLocal, logoFileName);
-				logoUrl = endpoint + "/" + bucket + "/" +logoUrl;
+				logoUrl = endpoint + "/" + bucket + "/" + logoUrl;
 			}
 			catch (NonFatalException e) {
 				LOG.error("NonFatalException while uploading Logo. Reason :" + e.getMessage(), e);
@@ -794,29 +832,30 @@ public class ProfileManagementController {
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred in uploading logo.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setLogo(logoUrl);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 			sessionHelper.setLogoInSession(session, userSettings);
-			
+
 			LOG.info("Logo uploaded successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LOGO_UPLOAD_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LOGO_UPLOAD_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while uploading logo. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LOGO_UPLOAD_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LOGO_UPLOAD_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateLogo() finished from ProfileManagementController");
 		return JspResolver.MESSAGE_HEADER;
 	}
 
-	// TODO
-	/*@RequestMapping(value = "/updateprofileimagecrop", method = RequestMethod.POST)
-	public String updateProfileImageCropped(Model model, HttpServletRequest request) {
+	@RequestMapping(value = "/updateprofileimage", method = RequestMethod.POST)
+	public String updateProfileImage(Model model, HttpServletRequest request) {
 		LOG.info("Method updateProfileImage() called from ProfileManagementController");
 		User user = sessionHelper.getCurrentUser();
 		String profileImageUrl = "";
@@ -831,10 +870,7 @@ public class ProfileManagementController {
 
 			String imageBase64 = request.getParameter("imageBase64");
 			String imageFileName = request.getParameter("imageFileName");
-			
-			LOG.info(imageBase64);
-			LOG.info(imageFileName);
-			
+
 			try {
 				if (imageFileName == null || imageFileName.isEmpty()) {
 					throw new InvalidInputException("Logo passed is null or empty");
@@ -842,16 +878,19 @@ public class ProfileManagementController {
 				if (imageBase64 == null || imageBase64.isEmpty()) {
 					throw new InvalidInputException("Logo passed is null or empty");
 				}
-				
-				byte[] bImg64 = imageBase64.substring("data:image/png;base64,".length()).getBytes();
-				byte[] bImg = Base64.decodeBase64(bImg64);
-				
-				FileOutputStream fos = new FileOutputStream("img.png");
-				fos.write(bImg);
-				fos.close();
-				
-				// imageName = fileUploadService.fileUploadHandler(fileLocal, logoFileName);
-				// imageName = endpoint + "/" + bucket + "/" +imageName;
+
+				BASE64Decoder decoder = new BASE64Decoder();
+				byte[] decodedBytes = decoder.decodeBuffer(imageBase64.substring("data:image/png;base64,".length()));
+				BufferedImage image = ImageIO.read(new ByteArrayInputStream(decodedBytes));
+				if (image == null) {
+					LOG.error("Buffered Image is null");
+				}
+
+				File fileLocal = new File(CommonConstants.IMAGE_NAME);
+				ImageIO.write(image, CommonConstants.IMAGE_FORMAT, fileLocal);
+
+				profileImageUrl = fileUploadService.fileUploadHandler(fileLocal, imageFileName);
+				profileImageUrl = endpoint + "/" + bucket + "/" + profileImageUrl;
 			}
 			catch (NonFatalException e) {
 				LOG.error("NonFatalException while uploading Profile Image. Reason :" + e.getMessage(), e);
@@ -867,7 +906,8 @@ public class ProfileManagementController {
 				if (companySettings == null) {
 					throw new InvalidInputException("No company settings found in current session");
 				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings, profileImageUrl);
+				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings,
+						profileImageUrl);
 				companySettings.setProfileImageUrl(profileImageUrl);
 				userSettings.setCompanySettings(companySettings);
 			}
@@ -877,7 +917,8 @@ public class ProfileManagementController {
 				if (regionSettings == null) {
 					throw new InvalidInputException("No Region settings found in current session");
 				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings, profileImageUrl);
+				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings,
+						profileImageUrl);
 				regionSettings.setProfileImageUrl(profileImageUrl);
 				userSettings.getRegionSettings().put(regionId, regionSettings);
 			}
@@ -887,7 +928,8 @@ public class ProfileManagementController {
 				if (branchSettings == null) {
 					throw new InvalidInputException("No Branch settings found in current session");
 				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings, profileImageUrl);
+				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings,
+						profileImageUrl);
 				branchSettings.setProfileImageUrl(profileImageUrl);
 				userSettings.getBranchSettings().put(branchId, branchSettings);
 			}
@@ -897,7 +939,8 @@ public class ProfileManagementController {
 				if (agentSettings == null) {
 					throw new InvalidInputException("No Agent settings found in current session");
 				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings, profileImageUrl);
+				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings,
+						profileImageUrl);
 				agentSettings.setProfileImageUrl(profileImageUrl);
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 
@@ -905,7 +948,7 @@ public class ProfileManagementController {
 				solrSearchService.editUserInSolr(agentId, CommonConstants.PROFILE_IMAGE_URL_SOLR, profileImageUrl);
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred while uploading profile image.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setProfileImageUrl(profileImageUrl);
@@ -914,109 +957,13 @@ public class ProfileManagementController {
 			sessionHelper.setProfileImageInSession(session, userSettings);
 
 			LOG.info("Profile Image uploaded successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_IMAGE_UPLOAD_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_IMAGE_UPLOAD_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while uploading logo. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_IMAGE_UPLOAD_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
-		}
-
-		LOG.info("Method updateProfileImage() finished from ProfileManagementController");
-		return JspResolver.MESSAGE_HEADER;
-	}*/
-
-	/**
-	 * Method to add or update profile logo
-	 * 
-	 * @param model
-	 * @param request
-	 * @param fileLocal
-	 */
-	@RequestMapping(value = "/updateprofileimage", method = RequestMethod.POST)
-	public String updateProfileImage(Model model, HttpServletRequest request, @RequestParam("logo") MultipartFile fileLocal) {
-		LOG.info("Method updateProfileImage() called from ProfileManagementController");
-		User user = sessionHelper.getCurrentUser();
-		String profileImageUrl = "";
-
-		try {
-			HttpSession session = request.getSession(false);
-			UserSettings userSettings = (UserSettings) session.getAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION);
-			OrganizationUnitSettings profile = (OrganizationUnitSettings) session.getAttribute(CommonConstants.USER_PROFILE);
-			if (userSettings == null || profile == null) {
-				throw new InvalidInputException("No user settings found in session");
-			}
-
-			String profileImageName = request.getParameter("logoFileName");
-			try {
-				if (profileImageName == null || profileImageName.isEmpty()) {
-					throw new InvalidInputException("Profile Image passed is null or empty");
-				}
-				profileImageUrl = fileUploadService.fileUploadHandler(fileLocal, profileImageName);
-				profileImageUrl = endpoint + "/" + bucket + "/" +profileImageUrl;
-			}
-			catch (NonFatalException e) {
-				LOG.error("NonFatalException while uploading Profile Image. Reason :" + e.getMessage(), e);
-				model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
-				return JspResolver.MESSAGE_HEADER;
-			}
-
-			if (user.isCompanyAdmin()) {
-				OrganizationUnitSettings companySettings = userSettings.getCompanySettings();
-				if (companySettings == null) {
-					throw new InvalidInputException("No company settings found in current session");
-				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings, profileImageUrl);
-				companySettings.setProfileImageUrl(profileImageUrl);
-				userSettings.setCompanySettings(companySettings);
-			}
-			else if (user.isRegionAdmin()) {
-				long regionId = user.getUserProfiles().get(0).getRegionId();
-				OrganizationUnitSettings regionSettings = userSettings.getRegionSettings().get(regionId);
-				if (regionSettings == null) {
-					throw new InvalidInputException("No Region settings found in current session");
-				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings, profileImageUrl);
-				regionSettings.setProfileImageUrl(profileImageUrl);
-				userSettings.getRegionSettings().put(regionId, regionSettings);
-			}
-			else if (user.isBranchAdmin()) {
-				long branchId = user.getUserProfiles().get(0).getBranchId();
-				OrganizationUnitSettings branchSettings = userSettings.getBranchSettings().get(branchId);
-				if (branchSettings == null) {
-					throw new InvalidInputException("No Branch settings found in current session");
-				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings, profileImageUrl);
-				branchSettings.setProfileImageUrl(profileImageUrl);
-				userSettings.getBranchSettings().put(branchId, branchSettings);
-			}
-			else if (user.isAgent()) {
-				long agentId = user.getUserProfiles().get(0).getAgentId();
-				AgentSettings agentSettings = userSettings.getAgentSettings().get(agentId);
-				if (agentSettings == null) {
-					throw new InvalidInputException("No Agent settings found in current session");
-				}
-				profileManagementService.updateProfileImage(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings, profileImageUrl);
-				agentSettings.setProfileImageUrl(profileImageUrl);
-				userSettings.getAgentSettings().put(agentId, agentSettings);
-
-				// Modify Agent details in Solr
-				solrSearchService.editUserInSolr(agentId, CommonConstants.PROFILE_IMAGE_URL_SOLR, profileImageUrl);
-			}
-			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
-			}
-
-			profile.setProfileImageUrl(profileImageUrl);
-			session.setAttribute(CommonConstants.USER_PROFILE, profile);
-			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
-			sessionHelper.setProfileImageInSession(session, userSettings);
-
-			LOG.info("Profile Image uploaded successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_IMAGE_UPLOAD_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
-		}
-		catch (NonFatalException nonFatalException) {
-			LOG.error("NonFatalException while uploading logo. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_IMAGE_UPLOAD_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.PROFILE_IMAGE_UPLOAD_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateProfileImage() finished from ProfileManagementController");
@@ -1062,6 +1009,9 @@ public class ProfileManagementController {
 					throw new InvalidInputException("No company settings found in current session");
 				}
 				contactDetailsSettings = companySettings.getContact_details();
+				// Send verification Links
+				sendVerificationLinks(contactDetailsSettings, mailIds, MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION,
+						companySettings);
 				contactDetailsSettings = updateMailSettings(contactDetailsSettings, mailIds);
 				contactDetailsSettings = profileManagementService.updateContactDetails(
 						MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings, contactDetailsSettings);
@@ -1075,6 +1025,9 @@ public class ProfileManagementController {
 					throw new InvalidInputException("No Region settings found in current session");
 				}
 				contactDetailsSettings = regionSettings.getContact_details();
+				// Send verification Links
+				sendVerificationLinks(contactDetailsSettings, mailIds, MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION,
+						regionSettings);
 				contactDetailsSettings = updateMailSettings(contactDetailsSettings, mailIds);
 				contactDetailsSettings = profileManagementService.updateContactDetails(
 						MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings, contactDetailsSettings);
@@ -1088,6 +1041,9 @@ public class ProfileManagementController {
 					throw new InvalidInputException("No Branch settings found in current session");
 				}
 				contactDetailsSettings = branchSettings.getContact_details();
+				// Send verification Links
+				sendVerificationLinks(contactDetailsSettings, mailIds, MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION,
+						branchSettings);
 				contactDetailsSettings = updateMailSettings(contactDetailsSettings, mailIds);
 				contactDetailsSettings = profileManagementService.updateContactDetails(
 						MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings, contactDetailsSettings);
@@ -1101,6 +1057,9 @@ public class ProfileManagementController {
 					throw new InvalidInputException("No Agent settings found in current session");
 				}
 				contactDetailsSettings = agentSettings.getContact_details();
+				// Send verification Links
+				sendVerificationLinks(contactDetailsSettings, mailIds, MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION,
+						agentSettings);
 				contactDetailsSettings = updateMailSettings(contactDetailsSettings, mailIds);
 				contactDetailsSettings = profileManagementService.updateAgentContactDetails(
 						MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings, contactDetailsSettings);
@@ -1108,7 +1067,7 @@ public class ProfileManagementController {
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred while updating emailids.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setContact_details(contactDetailsSettings);
@@ -1116,15 +1075,49 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Maild ids updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.MAIL_IDS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.MAIL_IDS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating Mail ids. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.MAIL_IDS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.MAIL_IDS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateEmailds() finished from ProfileManagementController");
 		return JspResolver.MESSAGE_HEADER;
+	}
+
+	// send verification links
+	private void sendVerificationLinks(ContactDetailsSettings oldSettings, List<MiscValues> mailIds, String profile,
+			OrganizationUnitSettings userSettings) throws InvalidInputException, UndeliveredEmailException {
+		LOG.debug("Method sendVerificationLinks() called from ProfileManagementController");
+		Map<String, String> urlParams = null;
+		
+		if (oldSettings == null) {
+			throw new InvalidInputException("No contact details object found for user");
+		}
+		MailIdSettings mailIdSettings = oldSettings.getMail_ids();
+		if (mailIdSettings == null) {
+			LOG.debug("No maild ids added, create new mail id object in contact details");
+			mailIdSettings = new MailIdSettings();
+		}
+		
+		for (MiscValues mailId : mailIds) {
+			String key = mailId.getKey();
+			String emailId = mailId.getValue();
+			if (key.equalsIgnoreCase(CommonConstants.EMAIL_TYPE_WORK)) {
+				urlParams = new HashMap<String, String>();
+				urlParams.put(CommonConstants.EMAIL_ID, emailId);
+				urlParams.put(CommonConstants.USER_PROFILE, profile);
+				urlParams.put(CommonConstants.EMAIL_TYPE, CommonConstants.EMAIL_TYPE_WORK);
+				urlParams.put(CommonConstants.USER_ID, userSettings.getIden() + "");
+
+				profileManagementService.generateVerificationUrl(urlParams, applicationBaseUrl
+						+ CommonConstants.REQUEST_MAPPING_EMAIL_EDIT_VERIFICATION, emailId, userSettings.getContact_details().getName());
+			}
+		}
+		LOG.debug("Method sendVerificationLinks() finished from ProfileManagementController");
 	}
 
 	// Update mail ids
@@ -1143,11 +1136,13 @@ public class ProfileManagementController {
 		for (MiscValues mailId : mailIds) {
 			String key = mailId.getKey();
 			String value = mailId.getValue();
-			if (key.equalsIgnoreCase("work")) {
+			if (key.equalsIgnoreCase(CommonConstants.EMAIL_TYPE_WORK)) {
 				mailIdSettings.setWork(value);
+				mailIdSettings.setWorkEmailVerified(false);
 			}
-			else if (key.equalsIgnoreCase("personal")) {
+			else if (key.equalsIgnoreCase(CommonConstants.EMAIL_TYPE_PERSONAL)) {
 				mailIdSettings.setPersonal(value);
+				mailIdSettings.setPersonalEmailVerified(false);
 			}
 			else {
 				if (others == null) {
@@ -1248,7 +1243,7 @@ public class ProfileManagementController {
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred while updating phone numbers.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setContact_details(contactDetailsSettings);
@@ -1256,11 +1251,13 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Contact numbers updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.CONTACT_NUMBERS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.CONTACT_NUMBERS_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating contact numbers. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.CONTACT_NUMBERS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.CONTACT_NUMBERS_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updatePhoneNumbers() finished from ProfileManagementController");
@@ -1391,7 +1388,7 @@ public class ProfileManagementController {
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
-				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
+				throw new InvalidInputException("Invalid input exception occurred while updating web addresses.", DisplayMessageConstants.GENERAL_ERROR);
 			}
 
 			profile.setContact_details(contactDetailsSettings);
@@ -1399,11 +1396,13 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Web addresses updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.WEB_ADDRESSES_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.WEB_ADDRESSES_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating web addresses. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.WEB_ADDRESSES_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.WEB_ADDRESSES_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateWebAddresses() finished from ProfileManagementController");
@@ -1411,7 +1410,8 @@ public class ProfileManagementController {
 	}
 
 	// update web addresses
-	private ContactDetailsSettings updateWebAddresses(ContactDetailsSettings contactDetailsSettings, List<MiscValues> webAddresses) throws InvalidInputException {
+	private ContactDetailsSettings updateWebAddresses(ContactDetailsSettings contactDetailsSettings, List<MiscValues> webAddresses)
+			throws InvalidInputException {
 		LOG.debug("Method updateWebAddresses() called from ProfileManagementController");
 		if (contactDetailsSettings == null) {
 			throw new InvalidInputException("No contact details object found for user");
@@ -1438,6 +1438,9 @@ public class ProfileManagementController {
 			else if (key.equalsIgnoreCase("personal")) {
 				webAddressSettings.setPersonal(value);
 			}
+			else if (key.equalsIgnoreCase("blogs")) {
+				webAddressSettings.setBlogs(value);
+			}
 			else {
 				if (others == null) {
 					others = new ArrayList<>();
@@ -1456,7 +1459,7 @@ public class ProfileManagementController {
 		LOG.info("Method updateFacebookLink() called from ProfileManagementController");
 		User user = sessionHelper.getCurrentUser();
 		SocialMediaTokens socialMediaTokens = null;
-		
+
 		try {
 			HttpSession session = request.getSession(false);
 			UserSettings userSettings = (UserSettings) session.getAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION);
@@ -1484,7 +1487,7 @@ public class ProfileManagementController {
 				socialMediaTokens = companySettings.getSocialMediaTokens();
 				socialMediaTokens = updateFacebookToken(socialMediaTokens, fbLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				companySettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.setCompanySettings(companySettings);
 			}
@@ -1497,7 +1500,7 @@ public class ProfileManagementController {
 				socialMediaTokens = regionSettings.getSocialMediaTokens();
 				socialMediaTokens = updateFacebookToken(socialMediaTokens, fbLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				regionSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getRegionSettings().put(regionId, regionSettings);
 			}
@@ -1510,7 +1513,7 @@ public class ProfileManagementController {
 				socialMediaTokens = branchSettings.getSocialMediaTokens();
 				socialMediaTokens = updateFacebookToken(socialMediaTokens, fbLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				branchSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getBranchSettings().put(branchId, branchSettings);
 			}
@@ -1523,24 +1526,26 @@ public class ProfileManagementController {
 				socialMediaTokens = agentSettings.getSocialMediaTokens();
 				socialMediaTokens = updateFacebookToken(socialMediaTokens, fbLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				agentSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
 				throw new InvalidInputException("Invalid input exception occurred in updating fb token.", DisplayMessageConstants.GENERAL_ERROR);
 			}
-			
+
 			profile.setSocialMediaTokens(socialMediaTokens);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Facebook link updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.FACEBOOK_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.FACEBOOK_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating facebook link in profile. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.FACEBOOK_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.FACEBOOK_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateFacebookLink() finished from ProfileManagementController");
@@ -1593,7 +1598,7 @@ public class ProfileManagementController {
 				socialMediaTokens = companySettings.getSocialMediaTokens();
 				socialMediaTokens = updateTwitterToken(socialMediaTokens, twitterLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				companySettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.setCompanySettings(companySettings);
 			}
@@ -1606,7 +1611,7 @@ public class ProfileManagementController {
 				socialMediaTokens = regionSettings.getSocialMediaTokens();
 				socialMediaTokens = updateTwitterToken(socialMediaTokens, twitterLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				regionSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getRegionSettings().put(regionId, regionSettings);
 			}
@@ -1619,7 +1624,7 @@ public class ProfileManagementController {
 				socialMediaTokens = branchSettings.getSocialMediaTokens();
 				socialMediaTokens = updateTwitterToken(socialMediaTokens, twitterLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				branchSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getBranchSettings().put(branchId, branchSettings);
 			}
@@ -1632,24 +1637,26 @@ public class ProfileManagementController {
 				socialMediaTokens = agentSettings.getSocialMediaTokens();
 				socialMediaTokens = updateTwitterToken(socialMediaTokens, twitterLink);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				agentSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
 				throw new InvalidInputException("Invalid input exception occurred in updating twitter token.", DisplayMessageConstants.GENERAL_ERROR);
 			}
-			
+
 			profile.setSocialMediaTokens(socialMediaTokens);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Twitter link updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.TWITTER_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.TWITTER_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating twitter link in profile. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.TWITTER_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.TWITTER_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateTwitterLink() finished from ProfileManagementController");
@@ -1702,7 +1709,7 @@ public class ProfileManagementController {
 				socialMediaTokens = companySettings.getSocialMediaTokens();
 				socialMediaTokens = updateLinkedinToken(linkedinLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				companySettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.setCompanySettings(companySettings);
 			}
@@ -1715,7 +1722,7 @@ public class ProfileManagementController {
 				socialMediaTokens = regionSettings.getSocialMediaTokens();
 				socialMediaTokens = updateLinkedinToken(linkedinLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				regionSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getRegionSettings().put(regionId, regionSettings);
 			}
@@ -1728,7 +1735,7 @@ public class ProfileManagementController {
 				socialMediaTokens = branchSettings.getSocialMediaTokens();
 				socialMediaTokens = updateLinkedinToken(linkedinLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				branchSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getBranchSettings().put(branchId, branchSettings);
 			}
@@ -1741,24 +1748,26 @@ public class ProfileManagementController {
 				socialMediaTokens = agentSettings.getSocialMediaTokens();
 				socialMediaTokens = updateLinkedinToken(linkedinLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				agentSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
 				throw new InvalidInputException("Invalid input exception occurred in upadting linkedin token.", DisplayMessageConstants.GENERAL_ERROR);
 			}
-			
+
 			profile.setSocialMediaTokens(socialMediaTokens);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("LinkedIn link updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LINKEDIN_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LINKEDIN_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating linkedIn link in profile. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LINKEDIN_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LINKEDIN_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateLinkedInLink() finished from ProfileManagementController");
@@ -1811,7 +1820,7 @@ public class ProfileManagementController {
 				socialMediaTokens = companySettings.getSocialMediaTokens();
 				socialMediaTokens = updateYelpLink(yelpLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.COMPANY_SETTINGS_COLLECTION, companySettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				companySettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.setCompanySettings(companySettings);
 			}
@@ -1824,7 +1833,7 @@ public class ProfileManagementController {
 				socialMediaTokens = regionSettings.getSocialMediaTokens();
 				socialMediaTokens = updateYelpLink(yelpLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.REGION_SETTINGS_COLLECTION, regionSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				regionSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getRegionSettings().put(regionId, regionSettings);
 			}
@@ -1837,7 +1846,7 @@ public class ProfileManagementController {
 				socialMediaTokens = branchSettings.getSocialMediaTokens();
 				socialMediaTokens = updateYelpLink(yelpLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.BRANCH_SETTINGS_COLLECTION, branchSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				branchSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getBranchSettings().put(branchId, branchSettings);
 			}
@@ -1850,24 +1859,26 @@ public class ProfileManagementController {
 				socialMediaTokens = agentSettings.getSocialMediaTokens();
 				socialMediaTokens = updateYelpLink(yelpLink, socialMediaTokens);
 				profileManagementService.updateSocialMediaTokens(MongoOrganizationUnitSettingDaoImpl.AGENT_SETTINGS_COLLECTION, agentSettings,
-							socialMediaTokens);
+						socialMediaTokens);
 				agentSettings.setSocialMediaTokens(socialMediaTokens);
 				userSettings.getAgentSettings().put(agentId, agentSettings);
 			}
 			else {
 				throw new InvalidInputException("Invalid input exception occurred in updating yelp token.", DisplayMessageConstants.GENERAL_ERROR);
 			}
-			
+
 			profile.setSocialMediaTokens(socialMediaTokens);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("YelpLinked in link updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.YELP_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.YELP_TOKEN_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating yelp link in profile. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.YELP_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.YELP_TOKEN_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateYelpLink() finished from ProfileManagementController");
@@ -1910,8 +1921,8 @@ public class ProfileManagementController {
 
 			String payload = request.getParameter("achievementList");
 			try {
-				if (payload == null || payload.isEmpty()) {
-					throw new InvalidInputException("Acheivements passed was null or empty");
+				if (payload == null) {
+					throw new InvalidInputException("Acheivements passed was null");
 				}
 				ObjectMapper mapper = new ObjectMapper();
 				achievements = mapper.readValue(payload, TypeFactory.defaultInstance().constructCollectionType(List.class, Achievement.class));
@@ -1972,11 +1983,13 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Achievements updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.ACHIEVEMENT_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.ACHIEVEMENT_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating achievement details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.ACHIEVEMENT_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.ACHIEVEMENT_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateAchievements() finished from ProfileManagementController");
@@ -2006,7 +2019,7 @@ public class ProfileManagementController {
 
 			String payload = request.getParameter("associationList");
 			try {
-				if (payload == null || payload.isEmpty()) {
+				if (payload == null) {
 					throw new InvalidInputException("Association passed was null or empty");
 				}
 				ObjectMapper mapper = new ObjectMapper();
@@ -2062,17 +2075,19 @@ public class ProfileManagementController {
 			else {
 				throw new InvalidInputException("Invalid input exception occurred in adding associations.", DisplayMessageConstants.GENERAL_ERROR);
 			}
-			
+
 			profile.setAssociations(associations);
 			session.setAttribute(CommonConstants.USER_PROFILE, profile);
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
-			
+
 			LOG.info("Associations updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.ASSOCIATION_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.ASSOCIATION_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating licence details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.ASSOCIATION_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.ASSOCIATION_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateAssociations() finished from ProfileManagementController");
@@ -2102,7 +2117,7 @@ public class ProfileManagementController {
 			String payload = request.getParameter("licenceList");
 			List<String> authorisedIn = null;
 			try {
-				if (payload == null || payload.isEmpty()) {
+				if (payload == null) {
 					throw new InvalidInputException("Licenses passed was null or empty");
 				}
 				ObjectMapper mapper = new ObjectMapper();
@@ -2164,16 +2179,19 @@ public class ProfileManagementController {
 			session.setAttribute(CommonConstants.CANONICAL_USERSETTINGS_IN_SESSION, userSettings);
 
 			LOG.info("Licence details updated successfully");
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LICENSES_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LICENSES_UPDATE_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
 		}
 		catch (NonFatalException nonFatalException) {
 			LOG.error("NonFatalException while updating licence details. Reason :" + nonFatalException.getMessage(), nonFatalException);
-			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.LICENSES_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
+			model.addAttribute("message",
+					messageUtils.getDisplayMessage(DisplayMessageConstants.LICENSES_UPDATE_UNSUCCESSFUL, DisplayMessageType.ERROR_MESSAGE));
 		}
 
 		LOG.info("Method updateProfileLicenses() finished from ProfileManagementController");
 		return JspResolver.MESSAGE_HEADER;
 	}
+
 	// JIRA SS-97 by RM-06 : EOC
 
 	/*
@@ -2182,7 +2200,6 @@ public class ProfileManagementController {
 	@RequestMapping(value = "/findapro", method = RequestMethod.POST)
 	public String findAProfile(Model model, HttpServletRequest request) {
 		LOG.info("Method findAProfile called.");
-		List<SolrDocument> users = new ArrayList<SolrDocument>();
 		SolrDocumentList results = null;
 		String patternFirst;
 		String patternLast;
@@ -2202,9 +2219,6 @@ public class ProfileManagementController {
 
 			try {
 				results = solrSearchService.searchUsersByFirstOrLastName(patternFirst, patternLast, startIndex, batchSize);
-				for (SolrDocument solrDocument : results) {
-					users.add(solrDocument);
-				}
 			}
 			catch (MalformedURLException e) {
 				LOG.error("Error occured while searching in findAProfile(). Reason is ", e);
@@ -2218,8 +2232,7 @@ public class ProfileManagementController {
 			errorResponse.setErrMessage(ErrorMessages.REQUEST_FAILED);
 			return new Gson().toJson(errorResponse);
 		}
-		model.addAttribute("users", users);
-		model.addAttribute("size", users.size());
+
 		model.addAttribute("numfound", results.getNumFound());
 		model.addAttribute("patternFirst", patternFirst);
 		model.addAttribute("patternLast", patternLast);
@@ -2271,7 +2284,46 @@ public class ProfileManagementController {
 		LOG.info("Method findAProfileScroll finished.");
 		return new Gson().toJson(users);
 	}
-	
+
+	/**
+	 * Method to initiate find a pro page based on profile level and iden
+	 * 
+	 * @param profileLevel
+	 * @param iden
+	 * @return
+	 */
+	@RequestMapping("/initfindapro")
+	public String initProListByProfileLevelPage(Model model, @QueryParam(value = "profileLevel") String profileLevel,
+			@QueryParam(value = "iden") Long iden, @QueryParam(value = "searchCriteria") String searchCriteria) {
+		LOG.info("Method initProListByProfileLevelPage called for profileLevel:" + profileLevel + " and iden:" + iden + " and searchCriteria:"
+				+ searchCriteria);
+		DisplayMessage message = null;
+		try {
+			if (profileLevel == null || profileLevel.isEmpty()) {
+				throw new InvalidInputException("profile level is invalid in initProListByProfileLevelPage",
+						DisplayMessageConstants.INVALID_PROFILE_LEVEL);
+			}
+			if (iden == null || iden <= 0l) {
+				throw new InvalidInputException("iden is invalid in initProListByProfileLevelPage", DisplayMessageConstants.GENERAL_ERROR);
+			}
+			SolrDocumentList solrResult = profileManagementService.getProListByProfileLevel(iden, profileLevel, 0, 0);
+			if (solrResult != null) {
+				model.addAttribute("numfound", solrResult.getNumFound());
+			}
+			model.addAttribute("profileLevel", profileLevel);
+			model.addAttribute("iden", iden);
+			model.addAttribute("searchCriteria", searchCriteria);
+		}
+		catch (NonFatalException e) {
+			LOG.error("NonFatalException in initProListByProfileLevelPage.Reason:" + e.getMessage(), e);
+			message = messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE);
+			model.addAttribute("message", message);
+			return JspResolver.MESSAGE_HEADER;
+		}
+		LOG.info("Method initProListByProfileLevelPage executed successfully");
+		return JspResolver.PROFILE_LIST;
+	}
+
 	/**
 	 * Method to return company profile page
 	 * 
@@ -2290,7 +2342,436 @@ public class ProfileManagementController {
 			return JspResolver.MESSAGE_HEADER;
 		}
 		model.addAttribute("companyProfileName", profileName);
+		model.addAttribute("profileLevel", CommonConstants.PROFILE_LEVEL_COMPANY);
 		LOG.info("Service to initiate company profile page executed successfully");
-		return JspResolver.PROFILE_COMPANY;
+		return JspResolver.PROFILE_PAGE;
+	}
+
+	/**
+	 * Method to return region profile page
+	 * 
+	 * @param companyProfileName
+	 * @param regionProfileName
+	 * @param model
+	 * @return
+	 */
+	@RequestMapping(value = "/regionprofile/{companyProfileName}/region/{regionProfileName}")
+	public String initRegionProfilePage(@PathVariable String companyProfileName, @PathVariable String regionProfileName, Model model) {
+		LOG.info("Service to initiate region profile page called");
+		String message = null;
+		if (companyProfileName == null || companyProfileName.isEmpty()) {
+			message = messageUtils.getDisplayMessage(DisplayMessageConstants.INVALID_COMPANY_PROFILENAME, DisplayMessageType.ERROR_MESSAGE)
+					.getMessage();
+			model.addAttribute("message", message);
+			return JspResolver.MESSAGE_HEADER;
+		}
+		if (regionProfileName == null || regionProfileName.isEmpty()) {
+			message = messageUtils.getDisplayMessage(DisplayMessageConstants.INVALID_REGION_PROFILENAME, DisplayMessageType.ERROR_MESSAGE)
+					.getMessage();
+			model.addAttribute("message", message);
+			return JspResolver.MESSAGE_HEADER;
+		}
+		model.addAttribute("companyProfileName", companyProfileName);
+		model.addAttribute("regionProfileName", regionProfileName);
+		model.addAttribute("profileLevel", CommonConstants.PROFILE_LEVEL_REGION);
+		LOG.info("Service to initiate region profile page executed successfully");
+		return JspResolver.PROFILE_PAGE;
+	}
+
+	/**
+	 * Method to return branch profile page
+	 * 
+	 * @param companyProfileName
+	 * @param branchProfileName
+	 * @param model
+	 * @return
+	 */
+	@RequestMapping(value = "/branchprofile/{companyProfileName}/branch/{branchProfileName}")
+	public String initBranchProfilePage(@PathVariable String companyProfileName, @PathVariable String branchProfileName, Model model) {
+		LOG.info("Service to initiate branch profile page called");
+		String message = null;
+		if (companyProfileName == null || companyProfileName.isEmpty()) {
+			message = messageUtils.getDisplayMessage(DisplayMessageConstants.INVALID_COMPANY_PROFILENAME, DisplayMessageType.ERROR_MESSAGE)
+					.getMessage();
+			model.addAttribute("message", message);
+			return JspResolver.MESSAGE_HEADER;
+		}
+		if (branchProfileName == null || branchProfileName.isEmpty()) {
+			message = messageUtils.getDisplayMessage(DisplayMessageConstants.INVALID_BRANCH_PROFILENAME, DisplayMessageType.ERROR_MESSAGE)
+					.getMessage();
+			model.addAttribute("message", message);
+			return JspResolver.MESSAGE_HEADER;
+		}
+		model.addAttribute("companyProfileName", companyProfileName);
+		model.addAttribute("branchProfileName", branchProfileName);
+		model.addAttribute("profileLevel", CommonConstants.PROFILE_LEVEL_BRANCH);
+		LOG.info("Service to initiate branch profile page executed successfully");
+		return JspResolver.PROFILE_PAGE;
+	}
+
+	/**
+	 * Method to return agent profile page
+	 * 
+	 * @param agentProfileName
+	 * @param model
+	 * @return
+	 */
+	@RequestMapping(value = "/individualprofile/{agentProfileName}")
+	public String initBranchProfilePage(@PathVariable String agentProfileName, Model model) {
+		LOG.info("Service to initiate agent profile page called");
+		String message = null;
+		if (agentProfileName == null || agentProfileName.isEmpty()) {
+			message = messageUtils.getDisplayMessage(DisplayMessageConstants.INVALID_INDIVIDUAL_PROFILENAME, DisplayMessageType.ERROR_MESSAGE)
+					.getMessage();
+			model.addAttribute("message", message);
+			return JspResolver.MESSAGE_HEADER;
+		}
+		model.addAttribute("agentProfileName", agentProfileName);
+		model.addAttribute("profileLevel", CommonConstants.PROFILE_LEVEL_INDIVIDUAL);
+		LOG.info("Service to initiate agent profile page executed successfully");
+		return JspResolver.PROFILE_PAGE;
+	}
+
+	// Fetch Admin hierarchy
+	@RequestMapping(value = "/getadminhierarchy", method = RequestMethod.GET)
+	public String getAdminHierarchy(Model model, HttpServletRequest request) {
+		LOG.info("Method getAdminHierarchy() called from ProfileManagementController");
+		User user = sessionHelper.getCurrentUser();
+
+		try {
+			if (user.isCompanyAdmin()) {
+				model = getCompanyHierarchy(model, request);
+			}
+			else if (user.isRegionAdmin()) {
+				model = getRegionHierarchy(model, request);
+			}
+			else if (user.isBranchAdmin()) {
+				model = getBranchHierarchy(model, request);
+			}
+		}
+		catch (InvalidInputException e) {
+			LOG.error("InvalidInputException while fetching hierarchy. Reason: " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
+		}
+
+		LOG.info("Method getAdminHierarchy() finished from ProfileManagementController");
+		return JspResolver.PROFILE_HIERARCHY;
+	}
+
+	private Model getCompanyHierarchy(Model model, HttpServletRequest request) throws InvalidInputException {
+		LOG.debug("Method getCompanyHierarchy() called from ProfileManagementController");
+		List<Region> regions;
+		List<Branch> branches;
+		List<AgentSettings> individuals;
+		String companyProfileName = request.getParameter("companyProfileName");
+		if (companyProfileName == "") {
+			LOG.error("Invalid companyProfileName passed in method getAdminHierarchy().");
+			throw new InvalidInputException("Invalid companyProfileName passed in method getAdminHierarchy().");
+		}
+
+		// Fetching Regions under Company
+		regions = organizationManagementService.getRegionsForCompany(companyProfileName);
+		model.addAttribute("regions", regions);
+
+		// Fetching Branches under Company
+		try {
+			branches = organizationManagementService.getBranchesUnderCompany(companyProfileName);
+			model.addAttribute("branches", branches);
+		}
+		catch (NoRecordsFetchedException e) {
+			LOG.error("NoRecordsFetchedException while fetching company hierarchy branches. Reason: " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
+		}
+
+		// Fetching Individuals under Company
+		try {
+			individuals = profileManagementService.getIndividualsForCompany(companyProfileName);
+			model.addAttribute("individuals", individuals);
+		}
+		catch (NoRecordsFetchedException e) {
+			LOG.error("NoRecordsFetchedException while fetching company hierarchy individuals. Reason: " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
+		}
+
+		LOG.debug("Method getCompanyHierarchy() finished from ProfileManagementController");
+		return model;
+	}
+
+	@RequestMapping(value = "/getregionhierarchy", method = RequestMethod.GET)
+	public String getRegionHierarchyOnClick(Model model, HttpServletRequest request) {
+		LOG.info("Method getRegionHierarchyOnClick() called from ProfileManagementController");
+		try {
+			model = getRegionHierarchy(model, request);
+		}
+		catch (InvalidInputException e) {
+			LOG.error("InvalidInputException while fetching region hierarchy. Reason: " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
+		}
+
+		LOG.info("Method getRegionHierarchyOnClick() finished from ProfileManagementController");
+		return JspResolver.PROFILE_HIERARCHY_CLICK_REGION;
+	}
+
+	private Model getRegionHierarchy(Model model, HttpServletRequest request) throws InvalidInputException {
+		LOG.debug("Method getRegionHierarchy() called from ProfileManagementController");
+		List<Branch> branches;
+		List<AgentSettings> individuals;
+
+		long regionId = Long.parseLong(request.getParameter("regionId"));
+		if (regionId == 0l) {
+			LOG.error("Invalid regionId passed in method getAdminHierarchy().");
+			throw new InvalidInputException("Invalid regionId passed in method getAdminHierarchy().");
+		}
+
+		// Fetching Branches under Region
+		branches = organizationManagementService.getBranchesByRegionId(regionId);
+		model.addAttribute("branches", branches);
+
+		// Fetching Individuals under Region
+		try {
+			individuals = profileManagementService.getIndividualsByRegionId(regionId);
+			model.addAttribute("individuals", individuals);
+		}
+		catch (NoRecordsFetchedException e) {
+			LOG.error("NoRecordsFetchedException while fetching region hierarchy. Reason: " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
+		}
+
+		LOG.debug("Method getRegionHierarchy() finished from ProfileManagementController");
+		return model;
+	}
+
+	@RequestMapping(value = "/getbranchhierarchy", method = RequestMethod.GET)
+	public String getBranchHierarchyOnClick(Model model, HttpServletRequest request) {
+		LOG.info("Method getBranchHierarchyOnClick() called from ProfileManagementController");
+		try {
+			model = getBranchHierarchy(model, request);
+		}
+		catch (InvalidInputException e) {
+			LOG.error("InvalidInputException while fetching branch hierarchy. Reason: " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(e.getErrorCode(), DisplayMessageType.ERROR_MESSAGE));
+		}
+
+		LOG.info("Method getBranchHierarchyOnClick() finished from ProfileManagementController");
+		return JspResolver.PROFILE_HIERARCHY_CLICK_BRANCH;
+	}
+
+	private Model getBranchHierarchy(Model model, HttpServletRequest request) throws InvalidInputException {
+		LOG.debug("Method getBranchHierarchy() finished from ProfileManagementController");
+		List<AgentSettings> individuals;
+		long branchId = Long.parseLong(request.getParameter("branchId"));
+		if (branchId == 0l) {
+			LOG.error("Invalid branchId passed in method getAdminHierarchy().");
+			throw new InvalidInputException("Invalid branchId passed in method getAdminHierarchy().");
+		}
+
+		// Fetching Individuals under Branch
+		individuals = profileManagementService.getIndividualsByBranchId(branchId);
+		model.addAttribute("individuals", individuals);
+
+		LOG.debug("Method getBranchHierarchy() finished from ProfileManagementController");
+		return model;
+	}
+
+	@RequestMapping(value = "/fetchreviews", method = RequestMethod.GET)
+	public String fetchReviews(Model model, HttpServletRequest request) {
+		LOG.info("Method fetchReviews() called from ProfileManagementController");
+		User user = sessionHelper.getCurrentUser();
+
+		boolean fetchAbusive = true;
+		List<SurveyDetails> reviewItems = null;
+		try {
+			double maxScore = CommonConstants.MAX_RATING_SCORE;
+			double minScore = Double.parseDouble(request.getParameter("minScore"));
+			int startIndex = Integer.parseInt(request.getParameter("startIndex"));
+			int numRows = Integer.parseInt(request.getParameter("numOfRows"));
+
+			if (user.isCompanyAdmin()) {
+				long companyId = Long.parseLong(request.getParameter("companyId"));
+				if (companyId == 0l) {
+					LOG.error("Invalid companyId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid companyId passed in method fetchReviews().");
+				}
+
+				reviewItems = profileManagementService.getReviews(companyId, minScore, maxScore, startIndex, numRows,
+						CommonConstants.PROFILE_LEVEL_COMPANY, fetchAbusive);
+			}
+			else if (user.isRegionAdmin()) {
+				long regionId = Long.parseLong(request.getParameter("regionId"));
+				if (regionId == 0l) {
+					LOG.error("Invalid regionId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid regionId passed in method fetchReviews().");
+				}
+
+				reviewItems = profileManagementService.getReviews(regionId, minScore, maxScore, startIndex, numRows,
+						CommonConstants.PROFILE_LEVEL_REGION, fetchAbusive);
+			}
+			else if (user.isBranchAdmin()) {
+				long branchId = Long.parseLong(request.getParameter("branchId"));
+				if (branchId == 0l) {
+					LOG.error("Invalid branchId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid branchId passed in method fetchReviews().");
+				}
+
+				reviewItems = profileManagementService.getReviews(branchId, minScore, maxScore, startIndex, numRows,
+						CommonConstants.PROFILE_LEVEL_BRANCH, fetchAbusive);
+			}
+			else if (user.isAgent()) {
+				long agentId = Long.parseLong(request.getParameter("agentId"));
+				if (agentId == 0l) {
+					LOG.error("Invalid agentId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid agentId passed in method fetchReviews().");
+				}
+
+				reviewItems = profileManagementService.getReviews(agentId, minScore, maxScore, startIndex, numRows,
+						CommonConstants.PROFILE_LEVEL_INDIVIDUAL, fetchAbusive);
+			}
+
+			model.addAttribute("reviewItems", reviewItems);
+		}
+		catch (InvalidInputException e) {
+			throw new InternalServerException(new ProfileServiceErrorCode(CommonConstants.ERROR_CODE_COMPANY_REVIEWS_FETCH_FAILURE,
+					CommonConstants.SERVICE_CODE_COMPANY_REVIEWS, "Something went wrong while fetching reviews"), e.getMessage());
+		}
+
+		LOG.info("Method fetchReviews() finished from ProfileManagementController");
+		return JspResolver.PROFILE_REVIEWS;
+	}
+
+	@ResponseBody
+	@RequestMapping(value = "/fetchreviewcount", method = RequestMethod.GET)
+	public String fetchReviewCount(Model model, HttpServletRequest request) {
+		LOG.info("Method fetchReviewCount() called from ProfileManagementController");
+		User user = sessionHelper.getCurrentUser();
+
+		boolean fetchAbusive = true;
+		long reviewCount = 0l;
+		try {
+			double maxScore = CommonConstants.MAX_RATING_SCORE;
+			double minScore = Double.parseDouble(request.getParameter("minScore"));
+
+			if (user.isCompanyAdmin()) {
+				long companyId = Long.parseLong(request.getParameter("companyId"));
+				if (companyId == 0l) {
+					LOG.error("Invalid companyId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid companyId passed in method fetchReviews().");
+				}
+
+				reviewCount = profileManagementService.getReviewsCount(companyId, minScore, maxScore, CommonConstants.PROFILE_LEVEL_COMPANY, fetchAbusive);
+			}
+			else if (user.isRegionAdmin()) {
+				long regionId = Long.parseLong(request.getParameter("regionId"));
+				if (regionId == 0l) {
+					LOG.error("Invalid regionId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid regionId passed in method fetchReviews().");
+				}
+
+				reviewCount = profileManagementService.getReviewsCount(regionId, minScore, maxScore, CommonConstants.PROFILE_LEVEL_REGION, fetchAbusive);
+			}
+			else if (user.isBranchAdmin()) {
+				long branchId = Long.parseLong(request.getParameter("branchId"));
+				if (branchId == 0l) {
+					LOG.error("Invalid branchId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid branchId passed in method fetchReviews().");
+				}
+
+				reviewCount = profileManagementService.getReviewsCount(branchId, minScore, maxScore, CommonConstants.PROFILE_LEVEL_BRANCH, fetchAbusive);
+			}
+			else if (user.isAgent()) {
+				long agentId = Long.parseLong(request.getParameter("agentId"));
+				if (agentId == 0l) {
+					LOG.error("Invalid agentId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid agentId passed in method fetchReviews().");
+				}
+
+				reviewCount = profileManagementService.getReviewsCount(agentId, minScore, maxScore, CommonConstants.PROFILE_LEVEL_INDIVIDUAL, fetchAbusive);
+			}
+		}
+		catch (InvalidInputException e) {
+			throw new InternalServerException(new ProfileServiceErrorCode(CommonConstants.ERROR_CODE_REVIEWS_COUNT_FETCH_FAILURE,
+					CommonConstants.SERVICE_CODE_COMPANY_REVIEWS, "Something went wrong while fetching reviews"), e.getMessage());
+		}
+
+		LOG.info("Method fetchReviewCount() finished from ProfileManagementController");
+		return reviewCount + "";
+	}
+
+	@ResponseBody
+	@RequestMapping(value = "/fetchaveragerating", method = RequestMethod.GET)
+	public String fetchAverageRating(Model model, HttpServletRequest request) {
+		LOG.info("Method fetchAverageRating() called from ProfileManagementController");
+		User user = sessionHelper.getCurrentUser();
+
+		boolean aggregateAbusive = true;
+		double averageRating = 0l;
+		try {
+			if (user.isCompanyAdmin()) {
+				long companyId = Long.parseLong(request.getParameter("companyId"));
+				if (companyId == 0l) {
+					LOG.error("Invalid companyId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid companyId passed in method fetchReviews().");
+				}
+
+				averageRating = profileManagementService.getAverageRatings(companyId, CommonConstants.PROFILE_LEVEL_COMPANY, aggregateAbusive);
+			}
+			else if (user.isRegionAdmin()) {
+				long regionId = Long.parseLong(request.getParameter("regionId"));
+				if (regionId == 0l) {
+					LOG.error("Invalid regionId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid regionId passed in method fetchReviews().");
+				}
+
+				averageRating = profileManagementService.getAverageRatings(regionId, CommonConstants.PROFILE_LEVEL_REGION, aggregateAbusive);
+			}
+			else if (user.isBranchAdmin()) {
+				long branchId = Long.parseLong(request.getParameter("branchId"));
+				if (branchId == 0l) {
+					LOG.error("Invalid branchId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid branchId passed in method fetchReviews().");
+				}
+
+				averageRating = profileManagementService.getAverageRatings(branchId, CommonConstants.PROFILE_LEVEL_BRANCH, aggregateAbusive);
+			}
+			else if (user.isAgent()) {
+				long agentId = Long.parseLong(request.getParameter("agentId"));
+				if (agentId == 0l) {
+					LOG.error("Invalid agentId passed in method fetchReviews().");
+					throw new InvalidInputException("Invalid agentId passed in method fetchReviews().");
+				}
+
+				averageRating = profileManagementService.getAverageRatings(agentId, CommonConstants.PROFILE_LEVEL_INDIVIDUAL, aggregateAbusive);
+			}
+		}
+		catch (InvalidInputException e) {
+			throw new InternalServerException(new ProfileServiceErrorCode(CommonConstants.ERROR_CODE_AVERAGE_RATING_FETCH_FAILURE,
+					CommonConstants.SERVICE_CODE_COMPANY_REVIEWS, "Something went wrong while fetching Average rating"), e.getMessage());
+		}
+
+		LOG.info("Method fetchAverageRating() finished from ProfileManagementController");
+		return averageRating + "";
+	}
+	
+	/**
+	 * Method to verify a new emailId
+	 * 
+	 * @param encryptedUrlParams
+	 * @param request
+	 * @param model
+	 * @return
+	 */
+	@RequestMapping(value = "/emailverification")
+	public String verifyAccount(@RequestParam("q") String encryptedUrlParams, HttpServletRequest request, Model model) {
+		LOG.info("Method to verify email called");
+		
+		try {
+			profileManagementService.updateEmailVerificationStatus(encryptedUrlParams);
+			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.EMAIL_VERIFICATION_SUCCESSFUL, DisplayMessageType.SUCCESS_MESSAGE));
+		}
+		catch (InvalidInputException e) {
+			LOG.error("InvalidInputException while verifying email. Reason : " + e.getMessage(), e);
+			model.addAttribute("message", messageUtils.getDisplayMessage(DisplayMessageConstants.INVALID_VERIFICATION_URL, DisplayMessageType.ERROR_MESSAGE));
+		}
+		LOG.info("Method to verify email finished");
+		return JspResolver.LOGIN;
 	}
 }
